style.css
nav {
    display: grid;
    grid-template-columns: 10% 1fr 1fr 10%;
    min-height: 15vh;
    color: black;
    align-items: center;
    background: #90e98d;
}

body{ 
    overflow-x :hidden; 
    min-height: 100vh;
    display: flex;
    flex-direction: column;
} 

#logo {
    grid-column: 2/3;
    font-size: 50px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

#goal {
    font-size: 40px;
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

#nat {
    margin-top: 20px;
    margin-bottom: 20px;
    display:block;
    margin-left: auto;
    margin-right:auto;
}
.title1 {
    text-align: center;
    font-size: 100px;
}

.button {
    height: 30px;
    width: 30px;
    justify-self: end;
    background-color:transparent;
    outline: none;
    border: none;

}

section {
    display: flex;
    height: 80vh;
    justify-content: center;
    align-items: center;

}


body{ 
    overflow-x :hidden; 
    }

.headline {
    position: absolute;
    top: 70%;
    left: 10%;
    font-size: 100px;
    transform:translate(-20%, -70%);
    color: white;
    z-index: 3;

}

.dropbtn {
    background-color: #5ad355;
    color: rgb(144, 233, 141);
    padding: 10px;
    margin-bottom: -50px;
    background-position:100%;
    font-size: 16px;
    border-width: 1px;
    border-color:rgb(3, 80, 0);
  }
  
  .dropdown {
    position: relative;
    left: 100%;
    display:inline-block;
  }
  
  .dropdown-content {
    top: 95%;
    display:none;
    position: absolute;
    background-color: #ffffff;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  

  .dropdown-content a:hover {background-color: #ddd;  top: 0px;}

  .dropdown:hover .dropdown-content {display: block; padding-left: 0%;}
  
  .dropdown:hover .dropbtn {background-color: #3e8e41;}

  .pbox {
    position: relative;
    width: 50%;
  }
  
  #homelinks {
    color: rgb(55, 90, 26);
  }

  .image {
    display: block;
    width: 350px;
    height: auto;
  }
  
  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 350px;
    opacity: 0;
    transition: .5s ease;
    background-color: #97d170;
  }
  
  .pbox:hover .overlay {
    opacity: 1;
  }
  
  .text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

  * {
    box-sizing: border-box;
  }
  
  body {
    font-family: Arial, Helvetica, sans-serif;
  }
  
  /* Float three columns side by side */
  .column {
    float: left;
    width: 33.33%;
    margin-top: 10%;
    padding: 0 10px;
    padding-top: 0px;
  }
  
  /* Remove extra left and right margins, due to padding in columns */
  .row {
    margin: auto;
    }
  
  /* Clear floats after the columns */
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
  /* Style the counter cards */
  .card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
    padding: 16px;
    text-align: center;
    background-color: #f1f1f1;
  }


.footer {
    position: relative;
    margin-top: auto;
    top: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 80px;
    background-color: rgb(86, 52, 38);
    color: rgb(255, 255, 255);
    text-align: center;
  }


.tableauPlaceholder {
    display: flex;
    align-items: center;
    justify-content: center;
}

